--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,3 @@
-bin/Debug/netcoreapp2.0/HelloGit.dll
-bin/Debug/netcoreapp2.0/HelloGit.pdb
-bin/Debug/netcoreapp2.0/HelloGit.deps.json
-bin/Debug/netcoreapp2.0/HelloGit.runtimeconfig.json
-bin/Debug/netcoreapp2.0/HelloGit.runtimeconfig.dev.json
-obj/HelloGit.csproj.nuget.cache
-obj/HelloGit.csproj.nuget.g.props
-obj/HelloGit.csproj.nuget.g.targets
-obj/project.assets.json
-obj/Debug/netcoreapp2.0/HelloGit.dll
-obj/Debug/netcoreapp2.0/HelloGit.pdb
-obj/Debug/netcoreapp2.0/HelloGit.AssemblyInfo.cs
-obj/Debug/netcoreapp2.0/HelloGit.AssemblyInfoInputs.cache
-obj/Debug/netcoreapp2.0/HelloGit.csproj.CoreCompileInputs.cache
-obj/Debug/netcoreapp2.0/HelloGit.csproj.FileListAbsolute.txt
+bin/*
+obj/*
+.vscode/*
